# Pdfium-Android

./: .gclient  .gitignore  CMakeLists.txt  README.md  build.diff  build.gradle  build.sh  consumer-proguard-rules.pro  raw.jfif  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: jni.cpp  util.hpp
src/main/java/com/github/axet/pdfium/: Config.java  PdfDocument.java  PdfiumCore.java
src/main/java/com/github/axet/pdfium/util/: Size.java  SizeF.java
